# autodns.rs

./: .gitattributes  .gitignore  LICENSE  Makefile  README.en.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-tauri.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/app/: App.tsx  ErrorBoundary.tsx  theme.ts
frontend/src/features/config/: doc.ts  options.ts  transforms.ts  validation.ts
frontend/src/i18n/: index.ts  language.ts  resources.ts
frontend/src/i18n/locales/: en-US.ts  zh-CN.ts
frontend/src/pages/: HistoryPage.tsx  LogsPage.tsx  LookupPage.tsx  OverviewPage.tsx  RulesPage.tsx  SettingsPage.tsx  SystemDnsPage.tsx  UpstreamsPage.tsx
frontend/src/shared/: LoadingOverlay.tsx  api.ts  format.ts  notifications.tsx  types.ts  ui.tsx
scripts/: build-windows-msi.ps1  dns-bench.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: certificates.rs  commands.rs  config.rs  desktop.rs  dns.rs  environment.rs  history.rs  lib.rs  logging.rs  main.rs  preferences.rs  service.rs  store.rs  system_dns.rs
