[package]
name = "autodns-tauri"
version = "0.1.0"
description = "autodns desktop app powered by Tauri"
authors = ["autodns"]
edition = "2021"

[lib]
name = "autodns_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arc-swap = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
idna = "1"
moka = { version = "0.12", default-features = false, features = ["sync"] }
parking_lot = "0.12"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-dialog = "2"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26"
url = "2"
webpki-roots = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
